[gd_scene load_steps=4 format=3 uid="uid://cx1dbnir46ld1"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_dnhpb"]

[sub_resource type="LabelSettings" id="LabelSettings_a20ro"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_frqiv"]
font_size = 40

[node name="prog54c" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.108
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = -2.98401
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnhpb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 247.0
offset_bottom = 157.0
text = "Radius:"
label_settings = SubResource("LabelSettings_a20ro")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Txt_Rad" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 25.0
offset_right = 737.0
offset_bottom = 180.0

[node name="btn calc" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 445.0
offset_right = 297.0
offset_bottom = 631.0
text = "Calculate"

[node name="btn clear" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 451.0
offset_right = 650.0
offset_bottom = 628.0
text = "Clear"

[node name="btn exit" type="Button" parent="."]
layout_mode = 0
offset_left = 721.0
offset_top = 454.0
offset_right = 987.0
offset_bottom = 631.0
text = "Exit"

[node name="output" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 178.0
offset_right = 650.0
offset_bottom = 423.0
label_settings = SubResource("LabelSettings_frqiv")

[connection signal="pressed" from="btn calc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btn clear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btn exit" to="." method="_on_btn_exit_pressed"]
